Atualizações (Login, Cadastro, Base)

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -52,7 +52,7 @@
                 </select>
             </div>
             <button type="submit" class="botao">Cadastrar Usuário</button>
-            <span>Já tem uma conta? Entrar</span>
+            <span><a href="/login">Já tem uma conta? Entrar</a></span>
         </form>
     </div>
 </body>
