--- a/templates/login.html
+++ b/templates/login.html
@@ -34,9 +34,9 @@
             </div>
             <button type="submit" class="botao">Acessar sistema</button>
             <div class="recuperacao flex">
-                <span>Esqueceu a senha?</span>
+                <span><a href="">Esqueceu a senha?</a></span>
                 <span class="separador"></span>
-                <span>Criar uma conta</span></div>
+                <span><a href="/cadastrar">Criar uma conta</a></span></div>
             </div>
         </form>
     </div>
