--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -23,18 +23,18 @@
             <div class="flex labels">
                 <div class="flex column label">
                     <div class="flex column">
-                        <label for="user">USUÁRIO</label>
-                        <input type="text" id="user" name="user"> 
+                        <label for="nome">USUÁRIO</label>
+                        <input type="text" id="nome" name="nome"> 
                     </div>
                     <div class="flex column">
-                        <label for="pin">SENHA</label>
-                        <input type="password" id="pin" name="pin">
+                        <label for="senha">SENHA</label>
+                        <input type="password" id="senha" name="senha">
                     </div>
                 </div>
                 <div class="flex column label">
                     <div class="flex column">
-                        <label for="telefone">TELEFONE</label>
-                        <input type="text" id="telefone" name="telefone">
+                        <label for="tell">TELEFONE</label>
+                        <input type="text" id="tell" name="tell">
                     </div>
                     <div class="flex column">
                         <label for="email">EMAIL</label>
@@ -45,10 +45,8 @@
             <div>
                 <label for="funcao">FUNÇÃO:</label>
                 <select id="funcao" name="funcao">
-                    <option value="tutor">Tutor</option>
-                    <option value="tutorado">Tutorado</option>
+                    <option value="aluno">Aluno</option>
                     <option value="professor">Professor</option>
-                    <option value="servidor">Servidor</option>
                 </select>
             </div>
             <button type="submit" class="botao">Cadastrar Usuário</button>
