Rotas de aluno, telas quase finalizadas.

--- a/templates/aluno/historico.html
+++ b/templates/aluno/historico.html
@@ -1,12 +1,9 @@
-{% extends "tutorado/basetutorado.html" %}
+{% extends "aluno/aluno.html" %}
 
 {% block titulo_sessao %}
 Histórico - Atividade de tutoria
 {% endblock %}
 
-{% block user %}
-Tutor(a): Ana Clara Lima
-{% endblock %}
 
 {% block content %}
 
