--- a/templates/aluno/marcar.html
+++ b/templates/aluno/marcar.html
@@ -1,10 +1,7 @@
-{% extends "tutorado/basetutorado.html" %}
+{% extends "aluno/aluno.html" %}
 
 {% block title %}Aluno - Marcar Tutoria{% endblock %}
 
-{% block user %}
-Aluno: Ana Clara
-{% endblock %}
 
 {% block titulo_sessao %}
 Marcar uma sessão de tutoria
