--- a/static/css/global.css
+++ b/static/css/global.css
@@ -26,7 +26,7 @@
     background: linear-gradient(
         270deg,
         rgba(150, 1, 118, 0.90) 9%,
-        rgba(4, 45, 136, 0.90) 100%
+        #042d88e6 100%
     );
 }
 
