--- a/templates/servidor/servidor.html
+++ b/templates/servidor/servidor.html
@@ -33,6 +33,14 @@
         Comunicação
     </a>
 
+    <a href="{{ url_for('usuarios.cadastrar_disciplina') }}" class="nav-link {% if request.endpoint == 'usuarios.cadastrar_disciplina' %}active{% endif %}">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+        </svg>
+        Disciplinas
+    </a>
+
     <a href="{{ url_for('servidor_perfil') }}"
        class="nav-link {% if request.endpoint == 'aluno_perfil' %}active{% endif %}">
         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="24" viewBox="0 0 22 24" fill="none">
