--- a/templates/servidor/configurar_orientador.html
+++ b/templates/servidor/configurar_orientador.html
@@ -1,4 +1,5 @@
 {% extends "servidor/servidor.html" %}
+{% block title %}Servidor - Configurar Professor Orientador | SICAT{% endblock %}
 {% block content %}
 <div class="card-stats max-w-lg mx-auto bg-white p-8 rounded-xl shadow-lg border border-gray-200">
     <h2 class="text-2xl font-bold mb-6 text-gray-800">Configurar Orientador: {{ usuario.nome }}</h2>
