Nova tutoria e registro tutoria

--- a/templates/tutor/historico.html
+++ b/templates/tutor/historico.html
@@ -1,12 +1,10 @@
-{% extends "base.html" %}
+{% extends "tutor/tutor.html" %}
 
 {% block titulo_sessao %}
 Dashboard do Tutor
 {% endblock %}
 
-{% block user %}
-Tutor(a): Ana Clara Lima
-{% endblock %}
+
 
 {% block content %}
 
