--- a/templates/tutor/perfil.html
+++ b/templates/tutor/perfil.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "tutor/tutor.html" %}
 
 {% block title %}Perfil do Tutor | SICAT{% endblock %}
 
-{% block user %}Tutor(a):{% endblock %}
 
 {% block content %}
 
