--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-    <title>Paagina Inicial</title>
+    <title>Página Inicial</title>
 </head>
 <body>
     <header class="container-principal">
