--- a/templates/professor_orientador/perfil.html
+++ b/templates/professor_orientador/perfil.html
@@ -1,6 +1,5 @@
-{% extends "tutor/tutor.html" %}
-
-{% block title %}Perfil do Tutor | SICAT{% endblock %}
+{% extends "professor_orientador/professor_orientador.html" %}
+{% block title %}Professor Orientador- Perfil | SICAT{% endblock %}
 
 {% block content %}
 <div class="container mx-auto p-6">
@@ -31,6 +30,7 @@
                 <a href="/painel" class="px-6 py-3 bg-gray-100 text-gray-600 rounded-xl font-semibold">Cancelar</a>
             </div>
             <div class="my-8 border-t border-gray-100"></div>
+            
         </form>
         <div class="mt-10 p-8 border-2 border-red-200 rounded-[32px] bg-red-50">
             <h3 class="text-red-800 font-bold text-xl mb-2">Excluir Conta</h3>
