--- a/templates/servidor/tutorias.html
+++ b/templates/servidor/tutorias.html
@@ -1,6 +1,51 @@
 {% extends "servidor/servidor.html" %}
 
-{% block title %}Servidor - Tutorias Marcadas | SICAT{% endblock %}
+{% block titulo_sessao %}Tutoriais Cadastrados{% endblock %}
 
 {% block content %}
+<div class="container mx-auto p-6">
+
+    {% for item in sessoes %}
+    <div class="bg-white shadow-md rounded-lg p-6 mb-6 border-l-4 border-indigo-600">
+
+        <p class="text-lg font-semibold text-indigo-800">
+            {{ item.sessao.data.strftime('%d/%m/%Y') }}
+            {{ item.sessao.horario.strftime('%H:%M') }}
+        </p>
+
+        <p class="text-gray-700 mt-2">
+            <strong>Descrição:</strong> {{ item.sessao.descricao }}
+        </p>
+
+        <p class="text-gray-700 mt-1">
+            <strong>Professor Orientador:</strong>
+            {{ item.professor_orientador }}
+        </p>
+
+        <h4 class="font-bold text-gray-700 mt-4 mb-2">
+            Alunos inscritos:
+        </h4>
+
+        {% if item.alunos %}
+            <ul class="list-disc list-inside text-gray-800">
+                {% for aluno in item.alunos %}
+                    <li style="list-style: none;">{{ aluno.nome }}</li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p class="text-gray-500 italic">
+                Nenhum aluno inscrito nesta tutoria.
+            </p>
+        {% endif %}
+
+    </div>
+    {% endfor %}
+
+    {% if not sessoes %}
+        <p class="text-center text-gray-600">
+            Nenhuma tutoria cadastrada no sistema.
+        </p>
+    {% endif %}
+
+</div>
 {% endblock %}
